--- a/evaluacion-16/index.html
+++ b/evaluacion-16/index.html
@@ -22,8 +22,8 @@
             <p class="parrafo" draggable="true" id="parrafo-8">8. Octavo</p>
         </div>
         <div class="imagen-fantasma"></div>
-        <div class="papelera">
-            <img src="
+        <div>
+            <img class="papelera" src="
 https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSMWeEC0tULzOjfWFAOdOHjUw9WjXhBDbirg&usqp=CAU
 " alt="papelera" />
         </div> 
